--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -2,3 +2,6 @@ searchInvoice=Searching Invoice's
 invNumber=Invoice Number
 invType=Invoice Type
 invCompanyCode=Company Code
+appTitle=My Title
+appDescription=my desc
+homePageTitle=Invoice
