--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -6,6 +6,6 @@ appTitle=My Title
 appDescription=my desc
 homePageTitle=Invoice
 invoiceList= Invoice List
-CONF= PO Confirmed
-PEND= PO Confirmation Pending
-OPEN= PO Open
+CONF= Invoice Confirmed
+PEND= Inoice Confirmation Pending
+OPEN= Invoice Open
