--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -10,3 +10,5 @@ CONF= Invoice Confirmed
 PEND= Inoice Confirmation Pending
 OPEN= Invoice Open
 plant=Plant
+InvDetailPage=Invoice Detail Page
+SelectedInv=Selected Invoice
