Panel to display details on same page

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -11,4 +11,5 @@ PEND= Inoice Confirmation Pending
 OPEN= Invoice Open
 plant=Plant
 InvDetailPage=Invoice Detail Page
-SelectedInv=Selected Invoice
+SelectedInv=Selected 
+invDetailPanel=Selected PO
