Invalid hash implemented

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -12,4 +12,6 @@ OPEN= Invoice Open
 plant=Plant
 InvDetailPage=Invoice Detail Page
 SelectedInv=Selected 
-invDetailPanel=Selected PO
+invDetailPanel=Selected Invoice
+InvalPath=Invalid Path
+InvalPath.description=Please check the path.
